# navi

./: .gitignore  Cargo.toml  main.rs
refs/noteplan-docs/: index.md  search.md
refs/noteplan-docs/article/: 100-how-to-empty-trash-folder.md  101-using-noteplan-on-windows.md  102-sync-with-git.md  104-share-files-between-devices.md  105-archive-processed-tasks.md  106-how-to-create-a-recurring-or-repeating-todo.md  107-how-to-download-plugins-on-ios-ipados.md  108-reserved-folder-names-special-folder-naming.md  109-digital-bullet-journal.md  110-how-to-schedule-tasks.md  111-search-text-inside-a-note.md  112-remove-a-recurring-task.md  114-remove-an-external-calendar.md  115-linking-notes.md  116-nested-tags.md  117-what-happen-to-my-notes-and-information-when-my-subscription-cancelled.md  118-send-a-spindump-to-analyze-high-cpu-usage.md  119-best-practices.md  120-apple-script.md  121-time-blocking.md  122-support-for-exchange-outlook-and-caldav-other-calendars.md  123-plugin-configuration.md  124-i-cant-renew-my-subscription.md  125-link-to-a-heading-inside-a-note.md  126-where-is-dropbox-sync.md  127-install-plugins-on-ios.md  128-how-to-restore-a-note-to-an-earlier-version.md  129-how-to-view-recently-edited-notes.md  130-how-to-publish-a-note-on-the-web.md  131-i-lost-some-notes-folders-how-to-restore.md  132-how-to-move-your-tasks-between-dates.md  133-calendar-events-not-syncing.md  134-meeting-notes.md  135-testflight-version-is-not-detecting-my-subscription.md  136-templates.md  137-plugin-hooks.md  138-synced-blocks.md  140-workflow-for-reviewing-daily-notes.md  (+208 more)
(+19 files in other folders)
