[package]
name = "navi"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "navi"
path = "main.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform", features = ["font-kit", "runtime_shaders"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
